implements roles api
