# app/Http/Requests/Api/Roles/RoleUpdateRequest.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Http\Requests\Api\Roles;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @property string[] $permissions
+ */
+class RoleUpdateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'permissions' => ['present', 'array'],
+            'permissions.*' => 'string'
+        ];
+    }
+}
