# docs/api.yaml
@@ -57,11 +57,14 @@ paths:
             type: string
           required: true
       requestBody:
-        description: Permission information/
+        description: Permission information.
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Permissions'
+              type: object
+              properties:
+                permissions:
+                  $ref: '#/components/schemas/Permissions'
       responses:
         '204':
           description: Success
